--- a/styles/style.css
+++ b/styles/style.css
@@ -4,16 +4,30 @@
     box-sizing: border-box;
 }
 
-#container,
+h1 {
+    font-family: Helvetica, Arial, sans-serif;
+    align-self: center;
+}
+
+#container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 20px 0;
+}
+
+#grid,
 .row {
     display: flex;
 }
 
-#container {
+#grid {
     flex-direction: column;
     width: 900px;
     height: 900px;
-    border: 10px solid red;
+    border: 1px solid;
 }
 
 .row {
